front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: 296062552975.dkr.ecr.ap-northeast-2.amazonaws.com/ec2-team-frontend:25cf1048213c86fca910b293d19dfa6bd010d00c
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 80
