front/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:296062552975:certificate/a6ba7ac0-3650-45c1-b6a4-6f410125e94d"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"  
spec:
  rules:
  - host: www.campinggo.store
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front
              port:
                number: 80
